(feat) adds changes to fix nav/logo bars margins, overriding bootstrap css to achive correct spacing, changes to color gradient

--- a/client/public/index/styles.css
+++ b/client/public/index/styles.css
@@ -56,13 +56,13 @@ html, body {
 }
 
 .topBarContainer {
-    flex: 0 1 50px;
+    flex: 0 0 50px;
     text-align: center;
 }
 
 .mainBodyContainer {
-    flex: 1;
-    background: linear-gradient(141deg, rgb(15, 184, 173) 0%, rgb(31, 200, 219) 51%, rgb(44, 181, 232) 75%);
+    flex: 1 1 auto;
+    background: linear-gradient(180deg, rgb(77, 210, 255) 0%, rgb(0, 191, 255) 51%, rgb(0, 172, 230) 75%);
 }
 
 
@@ -73,9 +73,12 @@ html, body {
 }
 
 
-hr {
-    margin: 0%;
-    border-color: black;
+#bootstrap-overrides hr {
+    margin: 0;
+    padding: 0px;
+    border: 0px;
+    height: 1px;
+    background-color: black;
 }
 
 .logo {
@@ -84,9 +87,7 @@ hr {
     display: inline-block;
 }
 
-
-
-.homeRunContainer {
+.homeRunsContainer {
     display: flex;
     width: 100%;
     height: 100%;
@@ -95,7 +96,7 @@ hr {
     flex-direction: column;
 }
 
-.homeRunItem {
+.homeRunsItem {
     opacity: .85;
     height: 50px;
     width: 70%;
@@ -107,6 +108,18 @@ hr {
     border-radius: 3px;
     margin: 5px;
     display: inline-block;
+}
+
+.homeRunContainer {
+    display: flex;
+    align-items: baseline;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.homeRun {
+    display: inline-block;
+    flex: 1 1 25%;
 }
 
 .reactComponentContainer {
